# leetrs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  picker.rs  tui.rs
src/tui/: mod.rs  utils.rs
src/tui/screen/: help_screen.rs  mod.rs  selection_screen.rs
