[package]
name = "lcode_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
dialoguer = "0.12.0"
directories = "6.0.0"
reqwest = { version = "0.13.2", features = ["json", "cookies"] }
rookie = "0.5.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
